// Everything below is located in the js-namespace

package Player;

message cPlayerConnect{
	required uint32 Clinetid = 1;
}

message cPlayerCreator{
	required uint32 ClientId = 1;
}

message cUiMessage{
	required string UiMsgName =1;
	repeated uint32 akMsgParame=2;
}

message cPlayerObjInfo{
	required uint32 x = 1;
	required uint32 y = 2;
	required uint32	iHp = 3;
	required uint32	iMaxHp = 4;
}

message cPlayerInfo {
	required uint32 id = 1;
	required string name = 2;
	required uint64 enterTime = 3;
}

message cPlayerItem{
	required uint32 itemid = 1;
}

message cPlayerTrun{
	required uint32 objLogicID = 1;
	required string fDir = 2;
}

message cPlayerState{
	required uint32 objLogicID =1;
	required uint32 objState =2;
}

message cPlayerGridChange{
	required uint32 objLogicID = 1;
	required uint32 x =2;
	required uint32 y =3;
}